increased each set to 5 words, fixed modal background on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -134,7 +134,6 @@ h1.title {
 
 .instruction-modal {
    width: 100%;
-   height: 100vh;
    position: absolute;
    background: rgba(14, 13, 14, 0.67);
    top: 0;
